--- a/topological_msgs/package.xml
+++ b/topological_msgs/package.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ratslam</name>
+  <name>topological_msgs</name>
   <version>0.0.0</version>
-  <description>his is a port of the original ratslam_ros repository from https://openslam-org.github.io/openratslam.html to ROS 2.</description>
+  <description>This package is a ROS driver responsible for providing custom message types for any necessary sensors.</description>
   <maintainer email="borgesjvt@gmail.com">João Victor Torres Borges</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  
   <depend>rclcpp</depend>
-  <depend>topological_msgs</depend>
-  <depend>cv_bridge</depend>
-  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
