--- a/config/config_surveyor.txt.in
+++ b/config/config_surveyor.txt.in
@@ -1,25 +1,29 @@
 [general]
-topic_root=/newcollege
+topic_root=/surveyor
                                                 	
 [ratslam]
-vt_match_threshold = 0.054
+image_crop_x_min=40
+image_crop_x_max=600
+image_crop_y_min=150
+image_crop_y_max=300
+vt_match_threshold = 0.06
 template_x_size=60
 template_y_size=10
-vt_panoramic=1
+vt_panoramic=0
 vt_patch_normalise=2
 
-pc_cell_x_size = 1.0
-pc_dim_xy = 30
-exp_delta_pc_threshold = 2.0
+pc_cell_x_size = 2.0
+pc_dim_xy = 18
+exp_delta_pc_threshold = 1.0
 pc_vt_inject_energy = 0.2
 vt_active_decay = 1.0
-
-exp_loops=100
+exp_loops=50
+exp_initial_em_deg=133
 
 [draw]
 enable=1
-vt_window_width=640
-vt_window_height=900
+vt_window_width=416
+vt_window_height=480
 exp_map_size=500
 posecells_size=250
 media_path=/home/fabio/ros2_ws/src/ratslam/src/media
