--- a/config/config_surveyor_visual.txt.in
+++ b/config/config_surveyor_visual.txt.in
@@ -1,14 +1,15 @@
 [general]
-topic_root=stlucia
+topic_root=/surveyor
                                                 	
 [ratslam]
 image_crop_x_min=40
 image_crop_x_max=600
 image_crop_y_min=150
 image_crop_y_max=300
-vt_match_threshold = 0.085
+vt_match_threshold = 0.054
 template_x_size=60
 template_y_size=10
+
 vt_shift_match = 5
 vt_step_match = 1
 vt_normalisation = 0.4
@@ -19,9 +20,9 @@ pc_dim_xy = 30
 exp_delta_pc_threshold = 1.0
 pc_vt_inject_energy = 0.15
 vt_active_decay = 1.0
+exp_initial_em_deg=22.5
 
-exp_loops=20
-
+exp_loops=10
 
 [visual_odometry]
 vtrans_image_x_min=195
@@ -32,12 +33,12 @@ vtrans_image_y_max=430
 vrot_image_x_min=195
 vrot_image_x_max=475
 vrot_image_y_min=75
-vrot_image_y_max=240
+vrot_image_y_max=430
 
-camera_fov_deg=53
-camera_hz = 10
+camera_fov_deg=160
+camera_hz = 1
 vtrans_scaling = 1000
-vtrans_max=20
+vtrans_max=1
 
 [draw]
 enable=1
