--- a/config/config_surveyor_visual.txt.in
+++ b/config/config_surveyor_visual.txt.in
@@ -6,23 +6,23 @@ image_crop_x_min=40
 image_crop_x_max=600
 image_crop_y_min=150
 image_crop_y_max=300
-vt_match_threshold = 0.054
+vt_match_threshold = 0.085
 template_x_size=60
 template_y_size=10
-
+vt_panoramic=0
+vt_patch_normalise=2
 vt_shift_match = 5
 vt_step_match = 1
 vt_normalisation = 0.4
 pc_vt_restore=0.04
 
-pc_cell_x_size = 2
-pc_dim_xy = 30
+pc_cell_x_size = 2.0
+pc_dim_xy = 18
 exp_delta_pc_threshold = 1.0
-pc_vt_inject_energy = 0.15
+pc_vt_inject_energy = 0.2
 vt_active_decay = 1.0
-exp_initial_em_deg=22.5
-
-exp_loops=10
+exp_loops=50
+exp_initial_em_deg=133
 
 [visual_odometry]
 vtrans_image_x_min=195
