--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /log
 /scripts/Figures
 /scripts/output_bags
-/scripts/exported_data
-/scripts/*.asv
+#/scripts/exported_data
+* .asv
 /mermaid_diagrams
+**/__pycache__
