--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /log
 /scripts/Figures
 /scripts/output_bags
-#/scripts/exported_data
+/scripts/exported_data
 * .asv
 /mermaid_diagrams
 **/__pycache__
